# otava

./: .asf.yaml  .gitignore  Dockerfile  README.md  hatch_build.py  otava.yaml  poetryw  pyproject.toml  tox.ini  toxw
.github/workflows/: python-app.yml
ci-tools/: wrappers.sh
docs/: ANALYZE.md  BASICS.md  BIG_QUERY.md  CSV.md  FEATURE_BRANCH.md  GETTING_STARTED.md  GRAFANA.md  GRAPHITE.md  JSON.md  LIST_METRICS.md  LIST_TESTS.md  MATH.md  POSTGRESQL.md  README.md  RELEASE.md  TEMPLATES.md  VALIDATING_PERF.md  index.html
docs_sphinx/source/: basics.md  conf.py  getting_started.md  index.rst  install.md  postgresql.md
examples/csv/: docker-compose.yaml
examples/csv/data/: local_sample.csv
examples/graphite/: docker-compose.yaml
examples/graphite/datagen/: datagen.sh
examples/json/data/: sample.json
examples/postgresql/: docker-compose.yaml
examples/postgresql/config/: otava.yaml
hunter/: analysis.py  series.py
otava/: analysis.py  bigquery.py  config.py  grafana.py  graphite.py  importer.py  main.py  postgres.py  report.py  series.py  slack.py  test_config.py  util.py
otava/change_point_divisive/: base.py  calculator.py  detector.py  significance_test.py
otava/examples/json/config/: otava.yaml
otava/examples/json/data/: sample.json
tests/: analysis_test.py  change_point_divisive_test.py  cli_help_test.py  config_test.py  csv_e2e_test.py  e2e_test_utils.py  graphite_e2e_test.py  graphite_test.py  importer_test.py  postgres_e2e_test.py  report_test.py  series_test.py  tigerbeetle_test.py  utils_test.py
tests/resources/: sample_config.yaml  sample_multi_branch.csv  sample_single_branch.csv
util/: check-signatures  check-signatures.sh  verify-asf-release  verify-asf-release.sh
