[tool.poetry]
name = "hunter"
version = "0.6.1"
description = ""
authors = ["Piotr Kołaczkowski <pkolaczk@datastax.com>", "Austin Bennett <austin@apache.org>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
dateparser = "^1.2.0"
expandvars = "^0.6.5"
numpy = "^1.26.0"
python-dateutil = "^2.9.0"
signal-processing-algorithms = "^1.3.2"
"ruamel.yaml" = "^0.17.21"
requests = "^2.32.0"
pystache = "^0.6.7"
tabulate = "^0.9.0"
validators = "^0.22.0"
slack-sdk = "^3.34.0"
google-cloud-bigquery = "^3.27.0"
pg8000 = "^1.31.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-benchmark = "^4.0.0"
pytz = "^2024.1"
tox = "^4.12.0"
flake8 = "^7.0.0"
autoflake = "^2.3.0"
isort = "^5.13.2"
ruff = "^0.2.0"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:future",
    "ignore::pytest.PytestCollectionWarning"
]

[tool.poetry.scripts]
hunter = 'hunter.main:main'

[tool.ruff]
line-length = 100

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"


