[tool.poetry]
name = "hunter"
version = "0.6.1"
description = ""
authors = ["Piotr Kołaczkowski <pkolaczk@datastax.com>", "Austin Bennett <austin@apache.org>"]




[tool.poetry.dependencies]
dateparser = "^1.0.0"
expandvars = "^0.6.5"
numpy = "^1.25"
python = ">=3.10,<3.14"
python-dateutil = "^2.8.1"
signal-processing-algorithms = "^1.3.2"
scipy = ">1.14.0"
"ruamel.yaml" = "=0.17.21"
requests = "^2.25.1"
pystache = "^0.6.0"
tabulate = "^0.8.7"
typing_extensions = "^4.12.2"
validators = "^0.18.2"
slack-sdk = "^3.4.2"
google-cloud-bigquery = "^3.25.0"
pg8000 = "^1.31.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-benchmark = "^4.0.0"
pytz = "^2024.1"
tox = "^4.12.0"
flake8 = "^7.0.0"
autoflake = "^2.3.0"
isort = "^5.13.2"
ruff = "^0.2.0"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:future",
    "ignore::pytest.PytestCollectionWarning"
]

[tool.poetry.scripts]
hunter = 'hunter.main:main'

[tool.ruff]
line-length = 100

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


